[gd_scene load_steps=7 format=3 uid="uid://cr2ririg8njbb"]

[ext_resource type="Texture2D" uid="uid://4luuk52y0kby" path="res://icon.svg" id="1_ec1jw"]
[ext_resource type="Script" uid="uid://crbe7fmenvtdr" path="res://scripts/order.gd" id="1_lgbgi"]

[sub_resource type="Theme" id="Theme_lgbgi"]
Label/colors/font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crgry"]
bg_color = Color(0.91908586, 0.9412989, 0.92382383, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3hqx"]
bg_color = Color(0.17828125, 0.7056299, 0.4412397, 1)

[sub_resource type="Theme" id="Theme_f4lm0"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_crgry")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_k3hqx")

[node name="Order" type="Control" node_paths=PackedStringArray("order_timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lgbgi")
order_timer = NodePath("PaperSheet/OrderTimer")

[node name="PaperSheet" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 205.0
offset_bottom = 244.0

[node name="VBoxContainer" type="VBoxContainer" parent="PaperSheet"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SoupLabel" type="Label" parent="PaperSheet/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lgbgi")
text = "Sopa "

[node name="IngredientImage" type="TextureRect" parent="PaperSheet/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ec1jw")

[node name="OrderTimer" type="ProgressBar" parent="PaperSheet"]
layout_mode = 0
offset_left = 38.5
offset_top = 215.0
offset_right = 166.5
offset_bottom = 223.0
theme = SubResource("Theme_f4lm0")
fill_mode = 1
show_percentage = false
